# csnc

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  engine.vcxproj  workplace.sln
client/cl_dll/: cdll_int.cpp  ev_hldm.cpp
client/cl_dll/cs_wpn/: cs_globals.cpp  cs_weapons.cpp
client/cl_dll/events/: event_knife.cpp
client/cl_dll/hud/: ammo.cpp  hud.cpp  scoreboard.cpp  timer.cpp  zb3.cpp
client/cl_dll/include/: cl_dll.h  com_weapons.h  ev_hldm.h  imgui_client.h  util_vector.h
client/cl_dll/include/hud/: hud.h  zb3.h
client/cl_dll/studio/: StudioModelRenderer.cpp
client/common/: com_model.h  con_nprint.h  interface.h
client/game_shared/: voice_status.cpp
client/mainui/: EngineCallback.cpp  basemenu.cpp  enginecallback_menu.h
client/mainui/font/: FontManager.cpp
client/mainui/menus/: CreateGame.cpp  Main.cpp
client/regamedll/regamedll/: Android.mk  CMakeLists.txt  sys_error_android_stub.cpp
client/regamedll/regamedll/dlls/: career_tasks.cpp  cbase.cpp  client.cpp  client.h  game.cpp  game.h  gamerules.cpp  gamerules.h  h_export.cpp  multiplay_gamerules.cpp  player.cpp  player.h  saverestore.cpp  util.cpp  weapons.cpp  world.cpp  zb3_gamerules.cpp
client/regamedll/regamedll/dlls/bot/: cs_bot_chatter.cpp  cs_bot_manager.cpp
client/regamedll/regamedll/dlls/wpn_shared/: wpn_knife.cpp
client/regamedll/regamedll/engine/: archtypes.h
client/regamedll/regamedll/msvc/: mp.def
client/regamedll/regamedll/pm_shared/: pm_shared.cpp
client/regamedll/regamedll/public/tier0/: platform.h
client/regamedll/regamedll/regamedll/: classes_dummy.cpp
client/regamedll/regamedll/version/: appversion.h
engine/SDL2/: CMakeLists.txt
engine/common/: backends.h
engine/engine/: Android.mk  cdll_exp.h  eiface.h
engine/engine/client/: cl_cmds.c  cl_game.c  cl_main.c  cl_menu.c  cl_scrn.c  cl_view.c  client.h  console.c  gl_rmain.c  imgui_bridge.cpp  imgui_bridge.h  imgui_bridge_android_stub.c  imgui_console.cpp  imgui_console.h  imgui_mainmenu.cpp  imgui_mainmenu.h  input.c  joyinput.c  keys.c
engine/engine/common/: common.h  identification.c  mathlib.c  mathlib.h  system.c
engine/engine/common/soundlib/: snd_mp3.c
engine/engine/platform/android/: android_nosdl.c  dlsym-weak.cpp
engine/engine/platform/sdl/: events.c  vid_sdl.c
engine/engine/server/: sv_client.c  sv_game.c  sv_init.c  sv_phys.c  sv_pmove.c  sv_save.c  sv_world.c
engine/hlsdk/common/: const.h
engine/hlsdk/engine/: cdll_int.h
engine/mainui/menus/: CreateGame.cpp
